<resources>
    <string name="app_name">Let\'sCube</string>
    <string name="message">Messages</string>
    <string name="friends">Friends</string>
    <string name="profile">My profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="estimate">Estimate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_any_n_messages_yet">You don\'t have any\n messages yet.</string>
    <string name="section_under_construction">Section under construction…</string>
    <string name="enter_n_your_n_account">Enter\n your\n account</string>
    <string name="you_logged_in">You logged in</string>
    <string name="log_out">Log out</string>
    <string name="registration">Registration</string>
    <string name="password_one_more_time">Password one more time</string>
    <string name="log_in">Log in</string>
    <string name="register">register</string>
    <string name="sww">Something went wrong</string>
    <string name="comp_pass">passwords are not comparable</string>
    <string name="user_registered">User registered</string>
    <string name="em_field">the field cannot be empty</string>
    <string name="ver_mail_has_sent">A verification letter has been sent to your email. Please, after verification, re-login to your account</string>
    <string name="ver_mail_has_sent_">After registration, a confirmation email will be sent to your email address.</string>
    <string name="your_mail_has_not_been_verified">Your mail has not been verified!</string>
    <string name="verify">verify</string>
    <string name="reset_password">reset password</string>
    <string name="cye">Check your email</string>
    <string name="instr_to_reset">To update your password, enter your email and leave the "password" field empty</string>
    <string name="you_can_also">You can also:</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="birthday_day_month_year">Birthday [day.month.year]</string>
    <string name="add_url"><![CDATA[https://firebasestorage.googleapis.com/v0/b/lbar-messenger.appspot.com/o/camera.png?alt=media&token=8ea07bde-1246-40ab-b3b6-340b9c7f81ec]]></string>
    <string name="fdb_inst">https://lbar-messenger-default-rtdb.firebaseio.com/</string>
    <string name="event_ribbon">Event ribbon</string>
    <string name="my_collection">My collection</string>
    <string name="people">People</string>
    <string name="author">Author: </string>
    <string name="add_picture">ADD PICTURE</string>
    <string name="message_hint">Message…</string>
    <string name="search_hint">Search…</string>
    <string name="title_login">Log in</string>
    <string name="title_profile">Profile</string>
    <string name="title_registration">Registration</string>
    <string name="title_event">Events</string>
    <string name="title_collection">Collection</string>
    <string name="title_messages">Messages</string>
    <string name="title_people">People</string>
    <string name="assembly_rooms">Assembly rooms</string>
    <string name="commandSolving">Command solving</string>
    <string name="last_mess">last message:\u0020</string>
    <string name="change_mess_discr">Here you can change your message</string>
    <string name="header_correcting">Correcting…</string>
    <string name="apply">APPlY</string>
    <string name="del_mess">DELETE MESSAGE</string>
    <string name="enter_pass">Enter password</string>
    <string name="priv_room_discr">It is necessary if you want to join private room</string>
    <string name="add_friend_discr_del">Here you can delete this user from your friends list!</string>
    <string name="add_friend_discr_add">Here you can add this user to your friends list!</string>
    <string name="add_friend_discr_req">Request has sent. Waiting for answer!</string>
    <string name="pls_enter_mess">Please, enter a message</string>
    <string name="now_u_r_friends">Now, you are friends!</string>
    <string name="not_a_friend_yet">Not a friend yet</string>
    <string name="all_is_up_to_date">All is up do date</string>
    <string name="internet_connection_lost">It seems, there is no internet connection</string>
    <string name="mcvList_discr">Here you can check your solving statistics</string>
    <string name="cube_name">Cube name</string>
    <string name="cube_name_discr">Here you can set the name of your puzzle</string>
    <string name="del_stat">Delete statistic</string>
    <string name="shure_del_stat">Are you sure you want to delete all statistics for this puzzle?</string>
    <string name="i_am_shure">Yes, i\'m sure</string>
    <string name="cube_not_enough_info">Not enough info\nNot enough info\nNot enough info\nNot enough info\nNot enough info</string>
    <string name="leave_app_while_stopwatch">Don\'t leave the app while the stopwatch is running</string>
    <string name="any_vp">Any</string>
    <string name="friends_vp">Friends</string>
    <string name="header">Header:</string>
    <string name="only_for_friends">Only for friends:</string>
    <string name="text">Text:</string>
    <string name="discipline">Discipline</string>
    <string name="settings">Settings</string>
    <string name="sync_with_collection">SYNC WITH COLLECTION</string>
    <string name="show_scrambles">SHOW SCRAMBLES</string>
    <string name="show_fine_buttons">SHOW FINE BUTTONS</string>
    <string name="hide_fine_buttons">HIDE FINE BUTTONS</string>
    <string name="hide_scrambles">HIDE SCRAMBLES</string>
    <string name="do_not_sync_with_collection">DO NOT SYNC WITH COLLECTION</string>
    <string name="current_results">Current results</string>
    <string name="best_results">Best results</string>
    <string name="not_enough_info">Not enough info</string>
    <string name="dark_mode">Dark mode</string>
    <string name="public_rooms">Public</string>
    <string name="private_rooms">Private</string>
    <string name="description">Description:</string>
    <string name="join_the_room">join the room</string>
    <string name="room_exit_shure">Are you sure you want to exit?</string>
    <string name="room_will_be_deleted">The room will be deleted after that</string>
    <string name="joined_room">joined the room</string>
    <string name="inspection_time">inspection time</string>
    <string name="non_scr_round">heating non-scramble round</string>
    <string name="comments">Comments</string>
    <string name="comment_hint">Comment…</string>
    <string name="interactions">Interactions</string>
    <string name="neww">New</string>
    <string name="request_sent">Friend request sent</string>
    <string name="request_canceled">Request canceled</string>
</resources>