<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_in_log_in"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/BlackDrawerIconStyle.DrawerIconStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#000000" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/prog_bar_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_view_enter_your_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_in_log_in"
        android:gravity="top|center"
        android:paddingTop="30dp"
        android:text="@string/enter_n_your_n_account"
        android:textSize="48dp"
        android:theme="@style/Elegant_font" />

    <LinearLayout
        android:id="@+id/layout_with_login_and_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_view_enter_your_account"
        android:layout_above="@id/bottom_register_reset_buttons_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="14"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_pass_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_with_login_and_pass"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_register_reset_buttons_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_you_can_also"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_can_also"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btregistr"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:theme="@style/AppTheme_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btreset_pass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="#ffffff"
            android:theme="@style/AppTheme_3"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>