<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#719fc1"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/prog_bar_reg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/textView_reg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_reg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top|center"
        android:paddingTop="30dp"
        android:text="@string/registration"
        android:textSize="48dp"
        android:theme="@style/Elegant_font"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/prog_bar_reg" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:theme="@style/Elegant_font"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_reg">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_name"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/name"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_birthday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/birthday_day_month_year"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_birthday"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_email"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="Email"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_mail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_pass"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:counterMaxLength="14"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_pass_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_pass_check"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:counterEnabled="true"
            app:counterMaxLength="14"
            android:gravity="center"
            android:hint="@string/password_one_more_time"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="Login"
            app:startIconDrawable="@drawable/ic_pass_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_pass_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_new_registr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="зарегистрироваться" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/ver_mail_has_sent_"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_button_layout"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>