<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/room_solo_dialog_settings_of_synchronization"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/colorMsgRightItem"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/room_solo_dialog_settings_of_synchronization_txt"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sync_with_collection"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/room_solo_dialog_settings_of_scrambles"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/room_solo_dialog_settings_of_synchronization"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/colorMsgRightItem"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/room_solo_dialog_settings_of_scrambles_txt"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/show_scrambles"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/room_solo_dialog_settings_of_buttons"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/room_solo_dialog_settings_of_scrambles"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/colorMsgRightItem"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/room_solo_dialog_settings_of_buttons_txt"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/show_fine_buttons"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>