<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#719fc1"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_in_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#000000"
        android:elevation="4dp"
        android:theme="@style/BlackDrawerIconStyle.DrawerIconStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_logg_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/log_out" />
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/prog_bar_onlog"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ver_txtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:paddingTop="30dp"
        android:text="@string/your_mail_has_not_been_verified"
        android:textColor="#C62828"
        android:textSize="28sp"
        android:theme="@style/Elegant_font"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ver_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/verify"
            android:theme="@style/AppTheme_2"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar_in_profile"
        android:layout_height="190dp"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/prof_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_add_photo"
            android:visibility="visible" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/test_img_ww"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_add_photo"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/on_log_text_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:gravity="top|center"
        android:paddingTop="30dp"
        android:text="@string/you_logged_in"
        android:textColor="#FFFFFF"
        android:textSize="32dp"
        android:theme="@style/AppTheme_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/on_log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:hint="email"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:theme="@style/AppTheme_2" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/on_log_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="birthday"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:theme="@style/AppTheme_2" />


    </LinearLayout>


</RelativeLayout>